@@ -1,9 +1,10 @@
-2022-06-20
+2022-06-23
 
         * Version 2.1.0 released
         ========================
 
-        Add GNdarray::index() method
+        Add optional energy scaling in GModelSpectralTable class (#4069)
+        Add GNdarray::index() method (#4069)
 
 
 2022-06-06
